# calculadora-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: calculadora.py  main.py
test/: test_calculadora.py
