[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculadora-python"
version = "0.1.0"
description = "Projeto simples de uma calculadora básica em Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Richard Willian", email = "richardwillianmirandadesouza@gmail.com" }
]
keywords = ["calculadora", "python", "exemplo", "básico"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]